Add containers to recipie page

--- a/w4d1/christopher_chicken_cordon_bleu.html
+++ b/w4d1/christopher_chicken_cordon_bleu.html
@@ -6,25 +6,59 @@
     <title>Christopher's Recipe</title>
     </head>
     <body>
-        <h2>Chicken Cordon Bleu</h2>
-        <ul>Ingredients</ul>
-        <ul>Preparation</ul>
-        <ul>Instructions</ul>
-        <ul>Reviews</ul>
-        <h2>What is Chicken Cordon Bleu?</h2>
-        <p>This classic French dish is easier than it looks!</p>
-        <p>Just follow these steps, and you'll feel like you crusing on the Seine.</p>
-        <a href="https://en.wikipedia.org/wiki/Cordon_bleu_(dish)">Chicken Cordon Bleu</a>
-        <img src="http://images-gmi-pmc.edge-generalmills.com/26807741-9624-4591-b290-bf42ab99222d.jpg"/>
+      <header>
+      <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/2005/s100/logo-emblem-red-1000-1-.jpg"/>
+      <h2>Chicken Cordon Bleu</h2>
+      <h3>Let's learn to cook the greatest dish!</h3>
+      <nav>
+        <ul>
+        <li><a href="#Ingredients">Ingredients</a></li>
+        <li><a href="#Preparation">Preparation</a></li>
+        <li><a href="#Instructions">Instructions</a></li>
+      </ul>
+      </nav>
+      </header>
+
+      <aside>
+        <a name="Ingredients"></a>
         <h2>Ingredients</h2>
-        <ul>Chicken</ul>
-        <ul>Cream</ul>
-        <ul>White Wine</ul>
-        <h2>Directions<h2>
+        <li>Chicken</li>
+        <li>Cream</li>
+        <li>White Wine</li>
+
+      </aside>
+
+      <section>
+        <h1>Chicken Cordon</h1>
+
+        <figure>
+          <img src="http://images-gmi-pmc.edge-generalmills.com/26807741-9624-4591-b290-bf42ab99222d.jpg"/>
+          <figcaption>
+            Amazing picture of the dish, served with a warm cream sauce.
+        <a href="https://en.wikipedia.org/wiki/Cordon_bleu_(dish)">Chicken Cordon Bleu</a>
+          </figcaption>
+  </figure>
+      <h2>Directions<h2>
         <ol>
-          <li>Being by thawing the chicken.</li>
-          <li>Chill the wine</li>
+          <li>
+            Being by thawing the chicken.
+          </li>
+          <li>
+            Chill the wine
+          </li>
+          <li>
+            Get a meat hammer and pound until chicken is very thin.
+          </li>
+          <li>
+            Prepare flour and parika mixture as well as an egg to dip the chicken into.
+          </li>
         </ol>
-        <p>Thanks to user Behr over at AllRecipies for creating this great dish!</p>
+    </section>
+        
+        <footer>
+          <p>You can find this great recipie here!</p>
+          <a href="http://allrecipes.com/recipe/8669/chicken-cordon-bleu-ii/?evt19=1"</a>
+          <p>Thanks to user Behr over at AllRecipies for creating this great dish!</p>
+        </footer>
     </body>
 </html>
