--- a/w4d1/christopher_chicken_cordon_bleu.html
+++ b/w4d1/christopher_chicken_cordon_bleu.html
@@ -4,13 +4,18 @@
 <html>
   <head>
     <title>Chicken Cordon Bleu</title>
+    <style>
+    p {
+      color: blue;
+    }
+
     <meta name="description" content="The most amazing French dish, consisting of cream, white wine, chicken, ham, and swiss cheese"
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/Users/Button/Desktop/app_academy/homework/w4d1/assets/css_reset.css" type="text/css"/>
     <script type="text/javascript" src="/Users/Button/Desktop/app_academy/homework/w4d1/review-submit-example.js"/></script>
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),l
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
@@ -18,8 +23,16 @@
         ga('send', 'pageview');
 
       </script>
+    </style>
     </head>
     <body>
+    <section>
+      <article>
+        <h2>Cats</h2>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </article>
+    </section>
       <header>
       <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/2005/s100/logo-emblem-red-1000-1-.jpg"/>
       <h2>Chicken Cordon Bleu</h2>
@@ -43,6 +56,7 @@
       </aside>
 
       <section>
+
         <h1>Chicken Cordon</h1>
 
         <figure>
